added save and load functions, added water textures

--- a/projects/base/base.vcxproj
+++ b/projects/base/base.vcxproj
@@ -100,6 +100,7 @@
     <ClInclude Include="app.h" />
     <ClInclude Include="example.h" />
     <ClInclude Include="Grid.h" />
+    <ClInclude Include="map.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="app.cpp" />
@@ -107,6 +108,7 @@
     <ClCompile Include="example.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="map.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\dev\components\kage2dutil\kage2dutil.vcxproj">
