Added Code for Game

--- a/projects/base_with_physics/base_with_physics.vcxproj
+++ b/projects/base_with_physics/base_with_physics.vcxproj
@@ -98,31 +98,29 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\base\LevelOne.h" />
-    <ClInclude Include="..\base\MainMenu.h" />
-    <ClInclude Include="..\base\map.h" />
     <ClInclude Include="..\base\SaveLoad.h" />
-    <ClInclude Include="..\base\Scene.h" />
-    <ClInclude Include="..\base\SceneManager.h" />
-    <ClInclude Include="..\base\SpriteAnimator.h" />
     <ClInclude Include="app.h" />
     <ClInclude Include="example.h" />
     <ClInclude Include="Grid.h" />
-    <ClInclude Include="Rabbit.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
+    <ClInclude Include="Level1.h" />
+    <ClInclude Include="Load.h" />
+    <ClInclude Include="mainMenu.h" />
+    <ClInclude Include="mapTile.h" />
+    <ClInclude Include="ScenE.h" />
+    <ClInclude Include="SceneManage.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="dependencies.cpp" />
     <ClCompile Include="example.cpp" />
     <ClCompile Include="Grid.cpp" />
+    <ClCompile Include="Level1.cpp" />
+    <ClCompile Include="Load.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Rabbit.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
+    <ClCompile Include="mainMenu.cpp" />
+    <ClCompile Include="mapTile.cpp" />
+    <ClCompile Include="ScenE.cpp" />
+    <ClCompile Include="SceneManage.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\dev\components\kage2dutil\kage2dutil.vcxproj">
